# mueva_test

./: .env.example  .gitignore  README.md  TASK_6_1_IMPLEMENTATION_SUMMARY.md  TASK_6_3_EDGE_CASES_SUMMARY.md  TASK_7_CHECKPOINT_VALIDATION.md  api.py  api_key_rotator.py  calibrate_threshold.py  check_qdrant_status.py  checkpoint_verification_task5.md  clear_db.py  debug_colpali.py  debug_output_image.txt  debug_output_image_v2.txt  debug_output_image_v4.txt  debug_retrieval.py  docker-compose.yml  fast_clean.py  fast_init.sh  init_db.py  manual_reindex.py  muvera_test.py  package-lock.json  package.json  pyproject.toml  reindex.py  reindex_data.py  scratch.py  scratch_check_images.py  scratch_fix.py  test_bug_condition_image_references.py  test_colpali.py  test_colpali_stack.py  test_construir_mensaje_usuario.py  test_cpu_to_gpu.py  test_detectar_tipo_consulta.py  test_embedding_generation.py  test_generar_prompt_sistema.py  test_groq.py  (+14 more)
.jules/: bolt.md
.kiro/specs/conditional-hamming-verification/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/conversational-text-responses/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/filter-image-references-in-text-queries/: .config.kiro  bug_condition_test_results.md  bugfix.md  design.md  tasks.md
.kiro/specs/semantic-image-search/: .config.kiro  design.md  requirements.md  tasks.md
app/: __init__.py  agent.py  main.py
frontend/: astro.config.mjs  package-lock.json  package.json
histopatologia_data/: chat_memory.sqlite
histopatologia_data/ontologia/: ontologia_histopatologia.json
(+7 files in other folders)
